[package]
name = "space_traders_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }

dotenvy = "0.15.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_framepace = "0.13.3"
chrono = "0.4.26"

bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git", rev = "a9e7275" }
bevy_eventlistener = "0.3.0"
bevy_save = "0.9.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
